# Moss

./: .gitignore  Cargo.toml  README.md
daemon/: Cargo.toml
daemon/src/: config_manager.rs  dbus_service.rs  device.rs  devices_manager.rs  errors.rs  fan_manager.rs  gpu_config.rs  gpu_data.rs  gpu_info.rs  lib.rs  main.rs  state_manager.rs
daemon/src/fan_curve/: fan_curve_info.rs  fan_mode.rs  hysteresis_curve.rs  linear_curve.rs  mod.rs
daemon/src/gpu_device/: gpu_config.rs  gpu_data.rs  gpu_info.rs  mod.rs  nvidia_device.rs
daemon/src/gpu_manager/: mod.rs
daemon/src/gpus_manager/: gpu_data.rs  mod.rs
resources/dbus_policy/: com.github.Mossd1.conf  org.moss.Mossd.conf
resources/systemd_service/: mossd.service
resources/template_config/: config.json
src/: arg_parser.rs  config_manager.rs  device_data.rs  fan_manager.rs  lib.rs  logger.rs  main.rs  state_manager.rs
src/fan_curve/: hysteresis_curve.rs  linear_curve.rs
