[package]
name = "moss-nv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "0.3.19", features = ["env-filter", "tracing-log"]}
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
nvml-wrapper = "0.11.0"
signal-hook = "0.3"
zbus = "5.9.0"
